--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ transition:0.5s ease;
 font-size:18px;
 }
 
-.btn-read:hover{background-color:rgb(50,50,49);color:white;}
+.btn-read:hover {background-color:rgb(50,50,49);color:white;}
 
 .fade{-webkit-animation-name: fade;-webkit-animation-duration:1.5s;animation-name:fade;animation-duration: 1.5s;}
 
@@ -377,5 +377,21 @@ footer a {color:white;cursor:pointer;}
 
 /* -------------------- My WORK --------------------*/
 
-#my-work {height:60em;}
-#my-work .projet {float:left; margin-left:5%; background-color:red;}
+#my-work {height:60em; padding-left:5%; padding-right:5%;}
+#my-work .projet {display:inline; background-color:transparent; text-align:left;}
+.btn-rapport, .btn-code 
+{
+margin-left:5%;
+position:relative;
+cursor:pointer;
+border:solid 2px rgb(50,50,49);
+background-color:transparent;
+color:rgb(50,50,49);
+font-family:'Roboto';
+text-decoration:none;
+padding:10px;
+transition:0.5s ease;
+font-size:18px;
+}
+.btn-rapport:hover, .btn-code:hover {background-color:rgb(50,50,49);color:white;}
+
