--- a/style.css
+++ b/style.css
@@ -214,9 +214,9 @@ height:400px;
 .img-para-ctc 	{background-image:url("./img/11.png");}
 .img-para-skill {background-image:url("./img/05.png");}
 
-#my-work {height:60em; padding-left:5%; padding-right:5%;}
+#my-work {height:cover; padding-left:8%; padding-right:8%; padding-bottom:5%;}
 #my-work .projet {display:inline; background-color:transparent; text-align:left;}
-#my-work .info-work {margin-bottom:3%; text-align:justify;}
+#my-work .info-work {margin-bottom:3%; text-align:justify; font-size:19px;}
 .btn-rapport, .btn-code 
 {
 margin-left:5%;
@@ -239,8 +239,6 @@ font-size:18px;
 .name-work {color:rgb(50,50,49); font-size:26px;}
 .keywords {font-weight:bold; font-size:18px;}
 
-.quote {width:100%; position:relative; padding-top:20px; padding-bottom:20px; font-size:20px; text-align:center; background-color:rgb(50,50,49); color:white;}
-
 
 /* -------------------- CONTACT --------------------*/
 
@@ -260,7 +258,7 @@ position:relative;
 padding:10px;
 color:rgb(50,50,49);
 background-color:transparent;
-transition:all 0.3s ease;
+transition:all 0.8s ease;
 width:55%;
 margin-top:3%;
 font-family:'Ubuntu';
