--- a/style.css
+++ b/style.css
@@ -1,321 +1,128 @@
-@import url(https://fonts.googleapis.com/css?family=Ubuntu);
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+@font-face{font-family:'Varela'; src: url('./font/VarelaRound-Regular.ttf');}
+@font-face{font-family:'Roboto'; src: url('./font/Roboto-Regular.ttf');}
+@font-face{font-family:'Lobster'; src: url('./font/Lobster-Regular.ttf');}
+@font-face{font-family:'Source'; src: url('./font/SourceSansPro-Regular.ttf');}
 
-html 		{background-color:white; scroll-behavior:smooth;}
-body 		{margin:0; padding-left:20px; padding-right:20px; padding-bottom:20px;}
-header 		{width:100%; padding-top:15px; padding-bottom:15px;}
-input:focus				{border:none;outline:none;}
-input:required 			{box-shadow:none;}
-input:invalid 			{box-shadow:none;}
-input					{border:none;}
-input::-moz-focus-inner {border:none;}
-a::-moz-focus-inner 	{border:none;}
-a 						{text-decoration:none;}
-textarea:focus			{border:none;outline:none;}
-textarea::-moz-focus-inner {border:none;}
-textarea:required 		{box-shadow:none;}
-textarea:invalid 		{box-shadow:none;}
-textarea 				{box-shadow:none;}
-textarea 				{resize: none;}
+* {margin: 0px; padding:0px; box-sizing:border-box; outline:none; z-index:1;}
+html{scroll-behavior: smooth;}
+header{position:sticky; position:-webkit-sticky; top:0; z-index:2;}
+nav {background-color:#2b2a2a;}
+body {background-color:#222; color:white;}
+article {position:relative; width:100%; height:cover;}
+footer {position:relative; background-color:#2b2a2a; padding:1%;}
+.rights {font-size:12px;}
 
-article
-{
-position:relative;
-padding-top:1px;
-background-color:white;
-text-align:center;
-font-family:'Ubuntu';
-background-attachment:fixed;
-background-position:center;
-background-repeat:no-repeat;
-background-size:cover;
+nav {display:flex; padding:2%;}
+.container-logo {flex:1;}
+.nav-links {flex:2; display:flex; list-style:none;}
+.nav-item {flex:1;}
+.nav-btn {border:none; background-color:transparent; cursor:pointer; color:#ccd1d1; font-family:'Varela'; transition:all 0.2s ease-in-out;}
+.nav-btn:hover {color:white;}
+
+.logo {font-family:'Lobster'; text-decoration:none; color:white;}
+
+.parallax {background-color:#2b2a2a; background-attachment:fixed; background-position:center; background-repeat:no-repeat; background-size:cover;}
+.img-1 {background-image:url('./img/07.png');}
+.img-2 {background-image:url('./img/06.png');}
+
+.title-home, .subtitle-home {font-family:'Source';}
+.text-home {font-family:'Varela';}
+
+.title-section {font-family:'Varela';}
+.subtitle-section, .text-section {font-family:'Roboto';}
+
+table {border-collapse: collapse; font-family:'Source';}
+td {border-top:1px solid white;}
+tr:hover {background-color:#2c2b2b;}
+.table-date {font-weight:bold; letter-spacing:1px;}
+.table-footer {border-bottom:1px solid white;}
+
+li {list-style:none; font-family:'Roboto';}
+
+.date-project {font-family:'Source';}
+.info-project, .tag-project {font-family:'Roboto'; text-align:justify;} 
+.tag-project {font-weight:bold;} 
+.btn-project {color:white; text-decoration:none; cursor:pointer; border:2px solid white; font-family:'Roboto'; font-weight:bold; transition:all 0.5s ease-in-out; background-color:transparent;}
+.btn-project:hover, .btn-project:focus, .btn-project:active {background-color:white; color:#2b2a2a;}
+
+.input, .area {transition:all 0.5s ease-in-out;}
+.input {background-color:transparent; border:none; border-bottom:2px solid #ccd1d1; color:white; font-family:'Roboto';}
+.area {font-family:'Roboto'; border:2px solid #ccd1d1; color:white; background-color:transparent;}
+.input:hover, .input:focus, .input:active {border-bottom:2px solid white;}
+.area:hover, .area:focus, .area:active {border:2px solid white;}
+
+.btn-sub {cursor:pointer; font-family:'Roboto'; color:#2b2a2a; background-color:white; font-weight:bold; transition:all 0.5s ease-in-out; border:1px solid #2b2a2a;}
+.btn-sub:hover, .btn-sub:active, .btn-sub:focus {background-color:#2b2a2a; color:white; border:1px solid white;}
+
+.rights {color:#ccd1d1; text-align:center;}
+
+@media only screen and (min-device-width:320px) and (max-device-width:767px) {
+
+	article {padding:5%;}
+	.nav-btn {margin-right:5%;}
+	.title-home {font-size:45px;}
+	.subtitle-home {font-size:25px;}
+	.text-home {font-size:15px; margin-top:1%;}
+
+	.about-article {margin-bottom:15%; width:100%;}
+	table {width:95%;}
+	td {padding:2%;}
+
+	.work-article {margin-bottom:15%;}
+	.subtitle-section {font-size:20px;}
+	.date-project {font-size:15px;}
+	.info-project, .tag-project {font-size:16px;}
+	.btn-project, .btn-sub {padding:3%; font-size:13px;}
+
+	.input {font-size:13px; padding-bottom:1%; margin-right:2%; margin-bottom:2%;}
+	.name {width:40%;}
+	.email {width:82%;}
+	.area {font-size:13px; padding:1%; width:82%;}
+
+	footer {padding:1%;}
+	.rights {font-size:12px;}
 }
 
-/* -------------------- MENU --------------------*/
+@media screen and (min-device-width:768px) {
 
-header input	{position:relative; font-size:14px; width:9%;}
-.btn-eng 		{float:right; font-size:14px; width:9%; text-align:center;}
-header input:hover, .btn-eng:hover {letter-spacing:8px;}
-.btn-ctc-eng 	{width:12%;}
-.btn-ctc 		{width:15%;}
-.btn-abt-fr		{width:12%;}
-.btn-eng 		{width:4%;}
+	nav {display:flex; padding:2%;}
+	.container-logo {flex:1;}
+	.nav-links {flex:2; display:flex; list-style:none;}
+	.nav-item {flex:1;}
+	.nav-btn {border:none; margin-right:10%; background-color:transparent; font-size:20px; cursor:pointer; color:#ccd1d1; font-family:'Varela'; transition:all 0.2s ease-in-out;}
+	.nav-btn:hover {color:white;}
+	.logo {font-size:28px;}
 
-header .my-name
-{
-text-decoration:none;
-font-family:'Ubuntu';
-font-size:22px;
-margin-left:25px;
-color:rgb(50,50,49);
-float:left;
+	article {padding:5%;}
+
+	.title-home {font-size:80px;}
+	.subtitle-home {font-size:35px;}
+	.text-home {font-size:20px;}
+
+	.about-article {margin-bottom:8%; width:100%;}
+
+	.text-home {font-size:22px;}
+	.title-section {font-size:40px;}
+	.subtitle-section {font-size:25px;}
+	.text-section {font-size:20px;}
+
+	table {font-size:18px; width:80%;}
+	td {padding:3%;}
+
+	li {font-size:20px;}
+
+	.work-article {padding:3%;}
+	.date-project {font-size:22px;}
+	.info-project, .tag-project {font-size:20px;} 
+
+	.input {font-size:18px; padding-bottom:1%; margin-right:2%; margin-bottom:2%;}
+	.name {width:20%;}
+	.email {width:42%;}
+	.area {font-size:18px; padding:1%; width:42%;}
+	.btn-project, .btn-sub {padding:1%; font-size:18px;}
 }
 
-.menu
-{
-height:cover;
-width:100%;
-position:sticky;
-top:0;
-text-align:right;
-background-color:white;
-z-index:1;
-padding-top:25px;
-padding-bottom:25px;
+@media screen and (min-device-width:1200px) {
+	.about-container {display:flex;}
+	.about-article {flex:1; width:30%;}
 }
-
-header input, .btn-eng
-{
-position:relative;
-font-family:Geneva, sans-serif;
-text-transform:uppercase;
-color:rgb(50,50,49);
-letter-spacing:4px;
-background-color:transparent;
-border:none;
-cursor:pointer;
-transition:all 0.5s;
--webkit-transition: all 0.5s;
-}
-
-.btn-acc,.btn-apr,.btn-trv,.btn-ctc-fr,.btn-fr,.btn-eng {margin-right:1%;margin-left:1%;}
-
-/* -------------------- ACCUEIL --------------------*/
-
-#accueil,#home 		{background-image:url("./img/07.png");font-size:32px; height:10em; padding-bottom:10%;}
-#accueil span 		{font-weight:bold;color:white;}
-#home span 			{font-size:40px;}
-#home p 			{font-size:35px;}
-.rect 				{background-color:rgb(50,50,49); margin:auto; padding-left:25px; padding-right:25px;}
-.typewriter 		{height:cover; display:inline-block; font-size:48px;}
-#home .typewriter 	{margin-top:10%;}
-.quote 				{color:white; font-size:35px; font-family:'Ubuntu'; display:inline-block;}
-
-.hello,.salutations
-{
-position:relative;
-margin-left:auto;
-margin-right:auto;
-color:rgb(50,50,49);
-font-weight:400;
-font-size:45px;
-margin-top:5%;
-}
-
-.typewriter-text
-{
-display:inline-block;
-overflow:hidden;
-white-space:nowrap;
-color:white;
-letter-spacing:2px;
-border-right:4px solid white;
-box-sizing:border-box;
-animation:typing 3s steps(29, end),blink .75s step-end infinite;
-}
-
-@keyframes typing
-{
-  from{width: 0%}
-  to{width: 100%}
-}
-@keyframes blink
-{
-  from,to{border-color: transparent}
-  50% {border-color: white;}
-}
-
-h3
-{
-position:relative;
-font-family:'Lato',sans-serif;
-text-transform:uppercase;
-color:rgb(50,50,49);
-padding-top:3%;
-font-size:28px;
-}
-
-/* -------------------- A PROPOS --------------------*/
-
-#about {height:50em;}
-#about .intro {margin-left:5%; margin-right:5%; font-size:20px; color:rgb(50,49,49);}
-
-.content-about {display:inline;}
-.content-about h4, #introduction h4
-{
-text-transform:uppercase;
-color:rgb(50,50,49);
-text-align:center;
-font-size:23px;
-}
-
-.gen-info,.educ,.my-skills {width:25%; margin-right:1%; margin-left:1%; float:left;}
-.educ {margin-left:10%; text-align:center;}
-.educ,.my-skills {text-align:left;}
-.content-about h5 {font-size:15px; color:rgb(50,49,49);}
-
-.interest {height:70px; margin-right:4%; margin-left:4%;}
-.gen-info .lang {font-size:17px; color:rgb(50,49,49); margin-left:10%; margin-top:5%; margin-bottom:15%; text-align:left;}
-.gen-info span {font-weight:bold;}
-
-.tab-an,.tab-ecole {font-family:'Ubuntu'; color:rgb(50,50,49);}
-.tab-an {width:35%; padding:2%; font-weight:bold; text-align:right; border-right:2px solid grey;}
-.tab-ecole {text-align:left; padding:2%;}
-.tab {border-spacing:0 20px;}
-
-.container {border-radius:3px; background-color:#ddd; height:25px; width:100%;}
-.skills {text-align:right; color:white; border-radius:3px; font-size:12px; padding-top:5px;}
-.html,.jv,.sql,.python,.c {background-color:rgb(50,50,49); opacity:0.9; height:20px; padding-right:8px;}
-
-.html	{width:80%;}
-.jv 	{width:50%;}
-.sql 	{width:70%;}
-.python {width:70%;}
-.c 		{width:50%;}
-
-.resume
-{
-width:100%;
-height:cover;
-padding-top:30px;
-padding-bottom:30px;
-position:relative;
-background-color:rgb(50,50,49);
-text-align:center;
-}
-
-.btn-cv
-{
-position:relative;
-padding:10px;
-border:2px solid white;
-background-color:transparent;
-color:white;
-font-weight:bold;
-font-family:'Lato',sans-serif;
-text-decoration:none;
-cursor:pointer;
-box-shadow:5px 5px 20px black;
-transition:all 0.8s;
-font-size:18px;
-}
-
-.btn-cv:hover {background-color:white; color:rgb(50,50,49);}
-
-/* -------------------- TRAVAUX --------------------*/
-
-.img-para-work,.img-para-ctc,.img-para-skill
-{
-background-attachment:fixed;
-background-position:center;
-background-repeat:no-repeat;
-background-size:cover;
-height:400px;
-}
-
-.img-para-work 	{background-image:url("./img/06.png");}
-.img-para-ctc 	{background-image:url("./img/11.png");}
-.img-para-skill {background-image:url("./img/05.png");}
-
-#my-work {height:cover; padding-left:8%; padding-right:8%; padding-bottom:5%;}
-#my-work .projet {display:inline; background-color:transparent; text-align:left;}
-#my-work .info-work {margin-bottom:3%; text-align:justify; font-size:19px;}
-.btn-rapport, .btn-code 
-{
-margin-left:5%;
-position:relative;
-cursor:pointer;
-border:solid 2px rgb(50,50,49);
-background-color:transparent;
-color:rgb(50,50,49);
-font-family:'Roboto';
-text-decoration:none;
-padding:10px;
-transition:0.5s ease;
-font-size:18px;
-}
-.btn-rapport:hover, .btn-code:hover {background-color:rgb(50,50,49);color:white;}
-
-.date-work,.info-work,.name-work,.keywords {color:rgb(50,50,49);}
-.date-work {font-size:21px;}
-.info-work {font-size:20px;height:cover;}
-.name-work {color:rgb(50,50,49); font-size:26px;}
-.keywords {font-weight:bold; font-size:18px;}
-
-
-/* -------------------- CONTACT --------------------*/
-
-#contact {height:cover;}
-
-form
-{
-position:relative;
-margin-right:auto;
-margin-left:auto;
-width:40%;
-}
-
-.name,.email,.msg
-{
-position:relative;
-padding:10px;
-color:rgb(50,50,49);
-background-color:transparent;
-transition:all 0.8s ease;
-width:55%;
-margin-top:3%;
-font-family:'Ubuntu';
-font-size:14px;
-}
-.name,.email {border:none; border-bottom:2px solid rgb(192,192,192);}
-.msg {height:8em; border:2px solid rgb(192,192,192);}
-.name:focus,.email:focus {border-bottom:2px solid rgb(50,50,49);}
-.msg:focus {border:2px solid rgb(50,50,49);}
-
-.send,.res,.rein
-{
-position:relative;
-width:cover;
-padding:10px;
-border-radius:5px;
-color:white;
-font-weight:bold;
-background-color:rgb(50,50,49);
-cursor:pointer;
-transition:all 0.8s;
-margin-top:4%;
-margin-left:2%;
-margin-right:2%;
-}
-
-.send:hover,.res:hover,.rein:hover {background-color:rgb(192,192,192);}
-
-.btn-email{position:relative; margin-left:50%;}
-.btn-lk{position:relative;}
-.img-email{height:8em;}
-.img-lk{height:8em;}
-
-/* -------------------- FOOTER --------------------*/
-
-footer
-{
-padding-top:1px;
-position:relative;
-color:white;
-background-color:rgb(50,50,49);
-text-align:center;
-height:cover;
-width:100%;
-padding-bottom:1%;
-margin-top:1%;
-}
-
-.rights
-{
-position:relative;
-font-family:'Ubuntu';
-font-size:15px;
-margin-top:3%;
-}
-
-footer a {color:white;cursor:pointer;}
